# aoc

./: .gitignore  README.md  puzzle_stub.py  pyproject.toml  run.py  tests.py
aoc/: classes.py  unittest.py
aoc2015/: d1.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py
aoc2015/d1/: d1.py
aoc2015/d3/: d3.py
aoc2015/d4/: d4.py
aoc2015/d5/: d5.py
aoc2015/d6/: d6.py
aoc2018/: d1.py  d1c1.py  d1c2.py  d2.py  d2c2.py  d3.py  d3_cheating.py  d3c1.py  d4.py  d5.py  d6.py  d7.py
aoc2018/d1/: d1c1.py  d1c2.py
aoc2018/d2/: d2c2.py
aoc2018/d3/: Test.py  d3c1.py
aoc2018/d4/: d4.py
aoc2019/: Readme.md  d1.py  d2.py  d3.py  d4.py  d5.py  processor.py  processor_logger.py
aoc2019/tests/: d4.py  processor.py  test_d1.py  test_d3.py  test_processor.py
