[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Lucas Brandstaetter <lucas@brandstaetter.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"
mypy = "^0.750"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
